--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.26",
     "@typescript-eslint/parser": "^7.8.0",
     "axios": "^1.6.8",
     "react": "18.2.0",
