--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
-    "react-native-axios": "^0.17.1"
+    "react-native-axios": "^0.17.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
