--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/redux": "^3.6.0",
     "@typescript-eslint/parser": "^7.8.0",
     "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-axios": "^0.17.1",
@@ -35,6 +36,7 @@
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
